[package]
name = "regedit_rust"
version = "0.1.0"
authors = ["Zak <zakmikellides@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winreg", "winnt", "ntdef"] }
serde = { version = "1", features = ["derive"] }
toml = "0.5"