[package]
name = "regedit_rust"
version = "0.1.0"
authors = ["Zak"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winreg", "winnt", "ntdef"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
